--- a/gb/25/7/14/n14550852.md
+++ b/gb/25/7/14/n14550852.md
@@ -1,15 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>大而美法案：与房地产相关的税改 全解析</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/07/id14550854-3df86df634805e6022b40326cae32a74-600x400.jpeg" />///image2=```diff
-- 大而美法案内包含多个与房地产相关的税改，将会影响众多美国屋主的荷包。（Shutterstock）
-```
-<h6>大而美法案内包含多个与房地产相关的税改，将会影响众多美国屋主的荷包。（Shutterstock）
-</h6>
+<tr><td VALIGN=TOP width="626"><h2 align=center>大而美法案：与房地产相关的税改全解析</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/07/id14550854-3df86df634805e6022b40326cae32a74-600x400.jpeg" />
+<h6>《大而美法案》内包含多个与房地产相关的税改，将会影响众多美国屋主的荷包。(Shutterstock)</h6>
 <hr>
-	<p>【大纪元2025年07月14日讯】美国国会在7月3日已经通过总统川普的“大而美法案”，这是一个包含众多税法和支出的法案，对美国人来说影响重大，其中有许多税法，将直接或间接的影响到房地产市场，而且有许多是要帮助美国人民更负担得起昂贵的房产，不管从租房到买房、卖房，甚至是建筑商都会全面受到影响，所以每个人都要详细的了解这次的税改法案！这次我就从房地产的角度来和大家谈谈这个新的税改法案。</p>
-<p>《One Big Beautiful Bill Act》，在中文报导中有多种翻译，有称“大美丽法案”也有称“大而美法案”或“伟大美丽法案”、“美丽大法案”，但是在大纪元媒体集团里面，我们最常称之为“大而美法案”，所以后面的介绍，我就统一用“大而美法案”来和大家说明。</p>
+	<p>【大纪元2025年07月14日讯】美国国会在7月3日已经通过总统川普的《大而美法案》，这是一个包含众多税法和支出的法案，对美国人来说影响重大，其中有许多税法，将直接或间接地影响到房地产市场，而且有许多是要帮助美国人民更负担得起昂贵的房产，不管从租房到买房、卖房，甚至是建筑商都会全面受到影响，所以每个人都要详细地了解这次的税改法案！这次我就从房地产的角度来和大家谈谈这个新的税改法案。</p>
+<p>《One Big Beautiful Bill Act》，在中文报导中有多种翻译，有称“大美丽法案”也有称“大而美法案”或“伟大美丽法案”、“美丽大法案”，但是在大纪元媒体集团里面，我们最常称之为“大而美法案”，所以后面的介绍，我就统一用《大而美法案》来和大家说明。</p>
 <p>而且我也要先声明，以下的报导只是我从大量资料中整理得出，但是我毕竟不是专业的税务专家或注册会计师，所以以下的描述仅供各位参考，不能当作税务依据。</p>
 <h2>州和地方税（SALT）抵扣</h2>
 <p>首先，我们来看看州和地方税的抵扣，也就是SALT抵扣，这个抵扣税法其实在5月25日的文章中我有详细说明过，只是这个税法在众议院和参议院也经过几番拉扯，所幸最后还是让抵扣上限从1万美元，上升到4万美元，让这些高税收所在州的居民松了一口气。</p>
@@ -17,69 +14,69 @@
 <p>还要留意的是，如果要享用SALT抵扣，就只能选择项目扣除。无法使用标准扣除，又同时使用SALT抵扣。而且，单身人士年收入，必须在调整后总收入（AGI）25万美元以下，夫妻合报是50万以下，如果是夫妻分居的家庭户主（Head of Household），或是有扶养责任的户主，需要在37万5,000以下。超过这些收入上限的人，就无法享受4万美元的抵扣，只能最高1万美元。</p>
 <p>所以，这个税法就是针对给美国中产家庭减轻税赋所设计的，并且是针对那些普遍有高房地产税、高收入的地区所适用的。在低房地产税、收入普遍未达标准的地区，或许使用标准扣除才会更划算。</p>
 <p><span style="color: #0000ff;">美国房贷族大利多！大而美法案的房地产减税变革｜从自住房到低收入住宅 三大税改｜还有四种抵税 要留意 7/12/2025 #美国地产热点</span><br />
-<a title="美国房贷族大利多！大而美法案的房地产减税变革｜从自住房到低收入住宅 三大税改｜还有四种抵税 要留意 #美国地产热点 7/12/2025" loading="lazy" data2-src=""></a><a href="https://dtjix0ckmebpi.cloudfront.net/M4lBQALi0RTw"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hpnu8p7lfl7xZlS0SfTjeIZ31hr1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<a title="美国房贷族大利多！大而美法案的房地产减税变革｜从自住房到低收入住宅 三大税改｜还有四种抵税 要留意 #美国地产热点 7/12/2025" loading="lazy" data2-src=""></a><a href="https://d1kgsi70b35buf.cloudfront.net/L0kBQALi0RTb"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hpnu8p7lfl7xZlS0SfTjeIZ31hr1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <h2>房贷利息与保险扣除恢复</h2>
-<p>第二、房贷利息与保险扣除恢复且永久延长。这次税改，房贷总额在75万以内所产生的年利息都可以完全抵扣，并且永久延长！而房贷保险费的抵扣，在2021年终止后，现在新税法重新恢复抵扣，也是永久延长。不过，假如您是在2017年12月 15日之前签订的贷款，仍然适用100万贷款的利息的抵扣上限，属于旧制。</p>
+<p>第二、房贷利息与保险扣除恢复且永久延长。这次税改，房贷总额在75万以内所产生的年利息都可以完全抵扣，并且永久延长！而房贷保险费的抵扣，在2021年终止后，现在新税法重新恢复抵扣，也是永久延长。不过，假如您是在2017年12月15日之前签订的贷款，仍然适用100万贷款的利息的抵扣上限，属于旧制。</p>
 <p>新的房贷利息扣除部分，最高可扣除借款75万的房贷利息，不过要留意这属于夫妻合报，单身只有借贷37.5万的利息是可以完整扣除的，并且适用主要住宅或第二住宅的房贷，但是不含投资性不动产，例如出租房就无法使用。</p>
 <p>另外，其实所谓的房贷不是只用于买房，只要是把房产作为抵押品，贷款金额用于房产的建造或重大修缮，这类的房屋抵押贷款利息也可以抵扣！但如果是用于支付学费、债务整合，就不能扣除了。还有，选择标准扣除的人也无法单独使用房贷利息扣除。</p>
-<p>举例说明：假设你在2025年以80万买房，贷款70万，三十年固定利率6%，第一年年利息约$42,000，因为符合借款上限的75万，所以$42,000全部可以抵扣。实际税务节省，将取决于你所在的税率级距。例如税率24%，可节税42,000×24% =10,080美元。</p>
+<p>举例说明：假设你在2025年以80万买房，贷款70万，三十年固定利率6%，第一年年利息约42,000美元，因为符合借款上限的75万，所以42,000美元全部可以抵扣。实际税务节省，将取决于你所在的税率级距。例如税率24%，可节税42,000×24%=10,080美元。</p>
 <p>如果是超高净值人士，是不是就无法享受这笔扣除，其实并不是。房贷利息扣除适用所有人群，是这项税法的特殊之处，所以就算是美国首富马斯克贷款买房，他也能享有这笔抵扣。</p>
 <p>我们假设马斯克购买200万的房产，贷款八成160万。他同样只有75万的贷款利息可以抵扣，其余超过的部分必须要课税。</p>
 <p>再来看房贷保险费的抵扣，这类保险是为了保护贷款机构而设的，只要首付款少于两成就需要有保险。所以各类型房贷，例如低收入房贷、军人房贷、农业部房贷，也都可以适用。不过，同样只用于主要住宅，对于投资房房贷保险无法抵扣。</p>
-<p>此外，这个部分有收入限制，单身者调整后总收入（AGI）在10万美元以下，可完全抵扣；10万－10万9,000之间，扣除额会按比例递减；超过10万9,000就无法扣除了。</p>
-<p>在夫妻合报部分，20万美元以下，可完全抵扣；20万－21万9,000之间，扣除额按比例递减；超过21万9,000就无法扣除了。房贷保险费的抵扣，基本上没有抵扣的上限，因为这部分的保费都不会太高，多数大约在500～3,000美元之间，只要符合收入限制就可以扣除。</p>
+<p>此外，这个部分有收入限制，单身者调整后总收入（AGI）在10万美元以下，可完全抵扣；10万—10万9,000之间，扣除额会按比例递减；超过10万9,000就无法扣除了。</p>
+<p>在夫妻合报部分，20万美元以下，可完全抵扣；20万—21万9,000之间，扣除额按比例递减；超过21万9,000就无法扣除了。房贷保险费的抵扣，基本上没有抵扣的上限，因为这部分的保费都不会太高，多数大约在500—3,000美元之间，只要符合收入限制就可以扣除。</p>
 <h2>低收入住房税收抵免扩大</h2>
 <p>第三、低收入住房税收抵免（Low-Income Housing Tax Credit, LIHTC）扩大。其实低收入住房税收抵免是自1986年以来，联邦政府推行的住房补助制度，提供税收抵免给开发商，鼓励他们建造或翻新可供低收入户承租的住宅单位。这个制度是全美最主要的可负担住房资金来源之一。</p>
-<p>在大而美法案中，低收入住房税收抵免进一步扩大，提高各州可用的每人分配额度，还特别针对“深度低收入户”、“老年人住宅”、“无家者住宅”分配额外的额度，实施期间从2026－2035年，共有10年时间。建设的类型，包括新建、重建、整修都可适用。川普政府预估可创造，或维持100万个可负担出租单位。</p>
-<p>因为这项抵免着重在建商，对于个人的影响，就是未来这些经济住房比较容易获得，也能对抗租金上涨的压力，所以这里我就不再更详细的说明。</p>
+<p>在《大而美法案》中，低收入住房税收抵免进一步扩大，提高各州可用的每人分配额度，还特别针对“深度低收入户”、“老年人住宅”、“无家者住宅”分配额外的额度，实施期间从2026—2035年，共有10年时间。建设的类型，包括新建、重建、整修都可适用。川普政府预估可创造，或维持100万个可负担出租单位。</p>
+<p>因为这项抵免着重在建商，对于个人的影响，就是未来这些经济住房比较容易获得，也能对抗租金上涨的压力，所以这里我就不再更详细地说明。</p>
 <p>以上三点，就是跟房地产有直接相关的税改法案。但是接下来还有几个税改也很重要，我也想顺带跟大家说明：</p>
 <h2>标准扣除额提高</h2>
-<p>其中一个是标准扣除额的提高。上面谈到的不管是SALT抵扣、房贷利息抵扣或是房贷保险抵扣，都是属于项目扣除，无法和标准扣除并行使用。简单的说，如果您使用标准扣除能抵扣比较多，那当然就不必使用项目扣除的部分。</p>
+<p>其中一个是标准扣除额的提高。上面谈到的不管是SALT抵扣、房贷利息抵扣或是房贷保险抵扣，都是属于项目扣除，无法和标准扣除并行使用。简单地说，如果您使用标准扣除能抵扣比较多，那当然就不必使用项目扣除的部分。</p>
 <p>但是，对于这些项目扣除额的提高，使用标准扣除的民众也不必担心没有享受到减税的福利，因为标准扣除额这次也提高了！</p>
 <p>2025税年，标准扣除额单身纳税人：从15,000增至15,750美元；已婚共同申报：从30,000增至31,500美元；家庭户主提高到23,625美元。并且到2028年，都会追踪通胀并有额外增量，例如截至2026年税额，根据国会预算处的预测：单身会提升到16,300、共同申报32,600美元。</p>
 <h2>年满65岁者额外扣除</h2>
-<p>不仅如此，对年满65岁以上的长者，在使用标准扣除之外，还可以额外再扣除单身者6,000美元，如果夫妻都年满65岁，就可以扣除12,000美元。要注意这无法与项目扣除并行，只能使用标准扣除。另一个限制是调整后总收入，只有在75,000美元以下，夫妻15万美元以下，才能享有完全抵扣，超过的话，就会阶段性递减。</p>
+<p>不仅如此，对年满65岁以上的长者，在使用标准扣除之外，还可以额外再扣除单身者6,000美元，如果夫妻都年满65岁，就可以扣除12,000美元。要注意这无法与项目扣除并行，只能使用标准扣除。另一个限制是调整后总收入，只有在7.5万美元以下，夫妻15万美元以下，才能享有完全抵扣，超过的话，就会阶段性递减。</p>
 <p>年长者的额外扣除，每年也会根据通胀指数自动调整，法案也改为永久性调整，不需国会每年再续期。这对退休族群来说真是一大福音，不仅对抗通胀和医疗支出压力，且提高年长者的生活保障。</p>
-<p>假设夫妻已经分别有70岁和66岁，使用标准扣除可抵31,500美元，再加上12,000美元，总共可扣除43,500美元。</p>
+<p>假设夫妻已经分别有70岁和66岁，使用标准扣除可抵3.15万美元，再加上1.2万美元，总共可扣除4.35万美元。</p>
 <h2>遗产税和赠与税免税额</h2>
-<p>大而美法案还把遗产税（Estate Tax）和赠与税（Gift Tax）的免税额，一举提高到1500万美元，另外，跨代转移税（Generation-Skipping Transfer Tax，GST Tax）也单独享有1500万美元免税额，夫妻一共就有3000万，并且与通胀挂钩，2025年起永久适用，这是对高净值家庭最重要的税改之一。</p>
-<p>用一个案例说明，假设A先生在2025年，赠与子女800万美元，这部分超过每年可免税赠与的article content begin -->8,000额度，其余近800万会计入遗产和赠与税的免税总额，换句话说，还剩下约700万的免税总额可以运用。</p>
+<p>《大而美法案》还把遗产税（Estate Tax）和赠与税（Gift Tax）的免税额，一举提高到1500万美元，另外，跨代转移税（Generation-Skipping Transfer Tax，GST Tax）也单独享有1500万美元免税额，夫妻一共就有3000万，并且与通胀挂钩，2025年起永久适用，这是对高净值家庭最重要的税改之一。</p>
+<p>用一个案例说明，假设A先生在2025年，赠与子女800万美元，这部分超过每年可免税赠与的1.8万美元额度，其余近800万会计入遗产和赠与税的免税总额，换句话说，还剩下约700万的免税总额可以运用。</p>
 <p>A先生过世后，遗产有600万美元，所以还没有超过剩下的700万额度，因此，A先生都不必为赠与税或遗产税缴钱。另外，假设A先生遗产有800万，将超过额度100万，这部分就必须要课40%的遗产税。</p>
 <p>还有跨代转移税，是对“跨代”的赠与或信托另加课税，如祖父给孙子，这部分有独立的1500万终身额度。这三个部分的免税额，对许多有高净值、高遗产的华裔家庭来说十分有利。</p>
 <h2>电动车购买抵免</h2>
-<p>另一个重要的影响是，电动车的联邦税收抵免将于 2025年9月30日提前结束，所以想买电动车的民众要加快脚步了！新车最高可获7,500美元抵免、二手车抵免则为4,000美元。所以很多人预期在抵免终止前，会出现一波购买高峰，抢在补贴停止前下单。</p>
-<p>针对电动车充电站安装的抵免，仍保留至2026年6月30日，但有收紧抵免的限制，个人最多抵免三成的安装费用，最高只抵免1,000美元；必须是必须是 合格的充电器，还必须设置于“低收入或非都市地区”才合格。</p>
+<p>另一个重要的影响是，电动车的联邦税收抵免将于2025年9月30日提前结束，所以想买电动车的民众要加快脚步了！新车最高可获7,500美元抵免、二手车抵免则为4,000美元。所以很多人预期在抵免终止前，会出现一波购买高峰，抢在补贴停止前下单。</p>
+<p>针对电动车充电站安装的抵免，仍保留至2026年6月30日，但有收紧抵免的限制，个人最多抵免三成的安装费用，最高只抵免1,000美元；必须是合格的充电器，还必须设置于“低收入或非都市地区”才合格。</p>
 <p>举例说明，B先生在郊区的独立屋，安装充电桩，费用是2,800美元，可抵免30%，等于是840美元，未超过1,000美元上限，所以可直接抵减应纳税额。</p>
-<p>以上就是这次“大而美法案”中和房地产有直接或间接相关的几个税法的说明，也再次声明本文仅作为参考性质，实际操作请咨询注册会计师或财务专家，以得到更准确的税务服务。◇</p>
-<p>责任编辑：李曜宇</p>
+<p>以上就是这次《大而美法案》中和房地产有直接或间接相关的几个税法的说明，也再次声明本文仅作为参考性质，实际操作请咨询注册会计师或财务专家，以得到更准确的税务服务。◇</p>
+<p>责任编辑：李曜宇#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542810.md#1">马斯克与川普因“大而美法案”发生争吵时间线</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543647.md#1">大而美法案或影响美医疗保健的五个方面</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543817.md#1">偷渡创新低 川普：这是要通过大而美法案原因</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550275.md#1">【时事金扫描】川普关税大棒会打台湾吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/30/n10099100.md#1" target="_blank">郑兢业：人吃与吃人（五）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/1/n10946163.md#1" target="_blank">新加坡法轮功学员修炼故事 真善忍改变人心</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/26/n10089507.md#1" target="_blank">共产暴政录：“破四旧”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/2/n9690997.md#1" target="_blank">修炼两年顽症消失 德国女士感恩大法</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546330.md#1">邪不压正 秦王李世民一身浩气 断李渊迁都之念</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536779.md#1">夜奔七百里闯敌营 看奇女子如何报恩还业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539802.md#1">为了一个女子 两家人欢喜废婚约另结亲家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550145.md#1">【车评】感性省油轿跑 2025 Hyundai Sonata Hybrid Limited</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/13/n14550378.md#1">【唐青看时事】中资美国买地梦碎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550235.md#1">【未解之谜】从沙漠烈焰到神秘圆洞：那些科学解不开的天坑之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549464.md#1">大陆底层民众生计维艰 治安越来越乱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14549862.md#1">网传胡锦涛病危消息 胡海峰在新疆露面</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14549939.md#1">【唐青看时事】上海深圳爆倒闭潮 失业大军现街头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549752.md#1">在内地被周星驰婉拒探班 港星黄一山吐露心声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549794.md#1">被酸没瘦多久就反弹 贾玲晒健身照打破传闻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/13/n14550325.md#1">赵薇被牵涉缅北电诈 亲哥赵健发文怒控</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549817.md#1">郑欣宜退赛《歌手》后首露面 疑颈部伤痕曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550115.md#1">新版《超人》周四预映 票房收入2250万美元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550244.md#1">哈佛心理学家发现：彼此信任的伴侣常说七句话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/13/n14550468.md#1">为何天气变化会引发偏头痛？ 如何缓解？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14549995.md#1">为何替过去疗伤可能不会让你感到快乐？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14549048.md#1">哪些蔬果干净？哪些最脏？新榜单带你安心选购</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546470.md#1">睡眠时保持完全黑暗的益处</a></li>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/7/14/n14550852.htm">大而美法案：与房地产相关的税改 全解析</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651278.md#1">【新闻大家谈】美国家安全战略 把台湾推向高处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651306.md#1">【军事情报局】普京拒绝和平 乌军还在红军村</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651357.md#1">【音乐】《芬兰颂》作品第26号｜2023神韵交响乐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650097.md#1">花滑大奖赛总决赛 华裔天才少女一举夺冠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646630.md#1">简单五步骤 自己也能迅速装上被套</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/7/14/n14550852.htm">大而美法案：与房地产相关的税改全解析</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/7/14/n14550852.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
